Fix align

--- a/src/components/OurPledge/OurPledge.scss
+++ b/src/components/OurPledge/OurPledge.scss
@@ -3,7 +3,7 @@
 .OurPledge {
   &__content-container {
     border-radius: radius('m');
-    padding: spacing(4) spacing(4);
+    padding: spacing(6) spacing(4);
     flex-direction: row;
     justify-content: space-between;
 
