--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -136,7 +136,7 @@ em {
 
 .tout {
   font-size: $font-3;
-  letter-spacing: spacing(0.16);
+  letter-spacing: spacing(0.2);
   line-height: $font-3;
 }
 
